Fixed off-center item columns.

--- a/billSplitter/emberjs/css/billSplitter.less.css
+++ b/billSplitter/emberjs/css/billSplitter.less.css
@@ -118,6 +118,7 @@ input.ItemPrice {
       bottom: @personTotalHeight + @personIconHeight;
 
       overflow: hidden;
+      text-align: center;
 
       .ScrollableItemList {
         position: absolute;
